# my8puzzle

./: .gitignore  CMakeLists.txt  README.md  a.out  compile.sh  includes.txt  link.sh  out_of_range.md  plan.md  sql-intersting.md  test.cpp
.cache/clangd/index/: Board.hpp.2A5355F949BCBAD1.idx  Board.tpp.A143E8268B1E2DF3.idx  BoardEntity.cpp.046CA6AEADA7E070.idx  BoardRepository.cpp.0299056760AA1E27.idx  Board_head.hpp.828B2A65E0A56F07.idx  CustomList.cpp.4F549CF765F17268.idx  MergeSort.cpp.677359E3C2CF0EC8.idx  MergeSort.hpp.164F1A72636DE857.idx  PreAllocatedStack.hpp.E29B52A49CBBB9DD.idx  Program.cpp.0EE6A1DF77B7525E.idx  Repository.cpp.4AD12082E68BCDF2.idx  SearchNode.hpp.4C7C7B9EC7AD8C33.idx  SmallerHashSet.cpp.F300F853C60354ED.idx  SolverService.cpp.9E07F3614DB7D3B7.idx  SolverService.hpp.E6122A22CB91276D.idx  TaskService.cpp.85307C88599855A8.idx  (+1 more)
backups/: Board.hpp
info/: making sure that a prevoius transaction doesn't read data from a future one.md  non-busy-waiting.md  sql-intersting.md  test2.cpp
src/: .clangd  .editorconfig  Program.cpp  fileExt  using a custom comparator.md  using a custom hash in cpp.md
src/Entities/: BoardEntity.cpp
src/Helpers/: Manager.cpp  MergeSort.cpp  MergeSort.hpp
src/Models/: Board.cpp  Board.hpp  Board.tpp  BoardSave.hpp  Board_head.hpp  SearchNode.hpp  Tiles.cpp  Tiles.hpp
src/Repositories/: BoardRepository.cpp  Repository.cpp
src/Services/: BoardEntityService.cpp  SolverService.cpp  SolverService.hpp  TaskService.cpp
src/structures/: CustomList.cpp  PreAllocatedStack.hpp  README.md  SmallerHashSet.cpp
